VPC1.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
        "Description": "Used to create VPCs",
        "Metadata": {
    
        },
        "Parameters": {
        
        "AZA": {
            "Description": "For AZA",
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-1a"
        },

        
        "AZB": {
          "Description": "For AZA",
          "Type": "AWS::EC2::AvailabilityZone::Name",
          "Default": "us-east-1b"
        },
        
        
        "PubSub1CIDR": {
            "Description": "This is for public subnet 1",
            "Type": "String",
            "Default": "10.0.1.0/24"
        },
        
        "PubSub2CIDR": {
          "Description": "For public subnet 2",
          "Type": "String",
          "Default": "10.0.2.0/24"
      },

      "PrtSub1CIDR": {
        "Description": "For the private subnet",
        "Type": "String",
        "Default": "10.0.3.0/24"
    },

    
    "VPCCIDR": {
        "Description": "For the VPC",
        "Type": "String",
        "Default": "10.0.0.0/16"
    }
    
        
        },
        "Mappings": {
    
        },
        "Conditions": {
    
        },
        "Resources": { 
        "DevVpc": {
          "Type": "AWS::EC2::VPC",
          "Properties": {
            "CidrBlock": { "Ref": "VPCCIDR" },
            "Tags":[{ "Key": "name", "Value":  "DevVpc" }]
          }
        },
        
        "DevVpcIgw": {
          "Type": "AWS::EC2::InternetGateway",
          "Properties": {
            "Tags":[{ "Key": "name", "Value":  "DevVpcIgw" }]
          }
        },
        "AttachGateway": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
            "VpcId": { "Ref": "DevVpc" },
            "InternetGatewayId": { "Ref": "DevVpcIgw" }
          }
        },
        
        "DevVpcPubSubRtb": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": { "Ref": "DevVpc" },
            "Tags":[{ "Key": "name", "Value":  "DevVpcPubSubRtb" }]
          }
        },
        
        "PubRt": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId": { "Ref": "DevVpcPubSubRtb" },
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": { "Ref": "DevVpcIgw" }
          }
        },
        
        "PubSubAss1": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": { "Ref": "DevVpcPubSub1" },
            "RouteTableId": { "Ref": "DevVpcPubSubRtb" }
          }
        },
        "PubSubAss2": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": { "Ref": "DevVpcPubSub2" },
            "RouteTableId": { "Ref": "DevVpcPubSubRtb" }
          }
        },
        
        
        
        
    
    "DevVpcPubSub1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": "true",
        "AvailabilityZone": { "Ref": "AZA" },
        "VpcId": { "Ref": "DevVpc" },
        "CidrBlock": { "Ref": "PubSub1CIDR" },
        "Tags":[{ "Key": "name", "Value":  "DevVpcPubSub1" }]
      }
    },
    
    "DevVpcPrtSub1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref": "AZB" },
        "VpcId": { "Ref": "DevVpc" },
        "CidrBlock": { "Ref": "PrtSub1CIDR" },
        "Tags":[{ "Key": "name", "Value":  "DevVpcPrtSub1" }]
      }
    },
    
    
    "DevVpcPubSub2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": "true",
        "AvailabilityZone": { "Ref": "AZA" },
        "VpcId": { "Ref": "DevVpc" },
        "CidrBlock": { "Ref": "PubSub2CIDR" },
        "Tags":[{ "Key": "name", "Value":  "DevVpcPubSub2" }]
      }
    },
    
    
    "webserver": {
        "Type": "AWS::EC2::Instance",
        "Properties": {
            "KeyName": "WebServer",
            "DisableApiTermination": "false",
            "ImageId": "ami-0b5eea76982371e91",
            "InstanceType": "t2.micro",
            "Monitoring": "false",
            "SecurityGroupIds" : [{ "Ref": "webserversg" }],
            "Tags": [{"Key": "name","Value": "webserver"}],
            "SubnetId":{"Ref":"DevVpcPubSub1"}
            }
    },

    
    "webserversg" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Used for my webserver",
        "SecurityGroupIngress" : [{
          "IpProtocol": "tcp",
              "FromPort": 80,
              "ToPort": 80,
              "CidrIp": "0.0.0.0/0"
          },
          {
              "IpProtocol": "tcp",
              "FromPort": 443,
              "ToPort": 443,
              "CidrIp": "0.0.0.0/0"
          },
          {
              "IpProtocol": "tcp",
              "FromPort": 22,
              "ToPort": 22,
              "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
              "FromPort": 3389,
              "ToPort": 3389,
              "CidrIp": "0.0.0.0/0"
      }],
        "VpcId" : { "Ref": "DevVpc" },
        "Tags": [{"Key": "name","Value": "webserversg"}]
      }
    }
    
            



    
    
    
    
    
    
        },
        "Outputs": {
    
        }
    }
